--- a/style.css
+++ b/style.css
@@ -1,1 +1,13 @@
-
+.link a{
+  text-decoration: none;
+  color: inherit;
+  -webkit-transition-duration: 0.4s; /* Safari */
+  transition-duration: 0.4s;
+}
+.link a,visited{
+  text-decoration: none;
+  color: inherit;
+}
+.link a:hover{
+  color: inherit;
+}
